全局组件配置完成

--- a/dev-note/1.环境搭建.md
+++ b/dev-note/1.环境搭建.md
@@ -31,7 +31,7 @@ $ npm install -g @vue/cli
 $ vue upgrade --next
 ```
 
-### Vite
+# Vite（web 开发构建工具）
 
 [Vite](https://cn.vitejs.dev/) 是一个 web 开发构建工具，由于其原生 ES 模块导入方式，可以实现闪电般的冷服务器启动。
 
@@ -51,3 +51,78 @@ $ npm install
 $ npm run dev
 ```
 
+# Bytemd（markdown编辑器）
+
+## 安装
+
+```shell
+$ npm install bytemd
+# vue集成
+$ npm install @bytemd/vue-next
+# 插件
+$ npm install @bytemd/plugin-gfm
+```
+
+## 引入
+
+`components.js`
+
+```js
+import { Editor } from '@bytemd/vue-next'
+import Bytemd from './components/Bytemd.vue'
+
+export default{
+    install (app) {
+        app.component('Bytemd', Bytemd)
+        app.component('Editor', Editor)
+    }
+}
+```
+
+`main.js`
+
+```js
+import { createApp, VueElement } from 'vue'
+import App from './App.vue'
+
+// 全局组件
+import components from './components.js'
+
+const app = createApp(App)
+app.use(components)
+app.mount('#app')
+```
+
+`Bytemd.vue`
+
+```vue
+<script setup lang="ts">
+import { ref } from 'vue'
+import gfm from '@bytemd/plugin-gfm'
+
+let content = ref('')
+
+const plugins = [gfm()]
+
+const handleChange = (v: string) => {
+  content.value = v
+  console.log(v);
+  
+}
+</script>
+
+<template>
+  <main>
+    <Editor :value="content" :plugins="plugins" @change="handleChange" />
+  </main>
+</template>
+
+<style>
+#app {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  font-weight: normal;
+}
+</style>
+```
